[tool.poetry]
name = "timeseriestats"
version = "0.1.0"
description = ""
authors = ["sambaiga <sambaiga@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.24.3"
arviz = ">=0.18.0"
altair = ">=5.3.0"
pandas = "<=2.0.0"
ppscore = ">=1.3.0"
matplotlib = ">=3.8.4"
matplotlib_inline = ">=0.1.6"
seaborn = ">=0.13.2"
statsmodels = ">=0.14.0"

[tool.poetry.group.dev.dependencies]
pylint = "2.14.0"
pytest-cov = "3.0.0"
toml = "0.10.2"
yapf = "0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
